# Universal-Build

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.cpp
helpers/: getContentOfParens.cpp  getContentOfParens.hpp
include/: lexer.hpp  parser.hpp
src/: lexer.cpp  main.cpp  parser.cpp
src/methods/: addFlag.cpp  addFlag.hpp  detectCompiler.cpp  detectCompiler.hpp  exec.cpp  exec.hpp  setCompiler.cpp  setCompiler.hpp
